JEDIT 4.1 VERSION HISTORY

* Version 4.1pre5

+ Syntax Highlighting Changes:

- Added Ruby-HTML syntax highlighting (Eric Benoit)
- Updated C-Sharp mode (Ollie Rutherfurd)

* Version 4.1pre4

Thanks to Kris Kopicki and Stefan Jozsa for contributing to this
release.

+ Syntax Highlighting Changes

- Added AppleScript syntax highlighting (Kris Kopicki)
- Improved Informix-4GL syntax highlighting (Stefan Jozsa)

+ User Interface Changes:

- TAB key can now be used to insert completions in the 'Complete Word'
  popup.

+ Bug Fixes

- Macro listing code was completely broken in 4.1pre3; only the first
  macro in each directory would be shown.
- Disabled Java-style auto indent for LISP and Scheme modes since in
  fact it is quite inappropriate there.
- Gutter highlight interval setting was broken.

* Version 4.1pre3

Thanks to Ivan Herman, Kris Kopicki, Marco Hunsicker, Matthias Schneider
and Rudolf Widmann for contributing to this release.

+ Syntax Highlighting Changes:

- Added regular expression matching features. Currently this is used to
  implement better (but still not 100% accurate) highlighting of various
  constructs in Perl mode, like s/// and such.

  - SEQ_REGEXP rule: highlights a sequence matching a regular
    expression.
  - SPAN_REGEXP rule: like SPAN but the start string is a regular
    expression (the end cannot be a regular expression currently).
  - EOL_SPAN_REGEXP rule: ditto, but for EOL_SPAN.

  - All rules must define a HASH_CHAR attribute; this is the character
    that the rule will be hashed by, to avoid checking every character
    against every regexp.

- Added a new AT_WORD_START attribute to all syntax rules. If this is
  set to TRUE, the rule will only match if it is at the start of a token
  boundary (in most cases, this is the same as a word boundary, hence
  the name).

  To illustrate the difference, suppose you have a SPAN rule that
  matches from "quux(" to ")". Without AT_WORD_START, it would highlight
  this sequence:
